<!--
  ~ Copyright (c) 2015. Fahad Alduraibi
  ~ http://www.fadvisor.net
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
                android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStart"
            android:onClick="ButtonsOnClick"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            style="@style/style_btn_blue1"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/resultsbtn"
            android:id="@+id/resultsbtn"
            style="@style/style_btn_blue1"
            android:onClick="ButtonsOnClick"/>

        <Button
            android:id="@+id/btnAboutUs"
            android:onClick="ButtonsOnClick"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/aboutus"
            style="@style/style_btn_blue1"/>

        <Button
            android:id="@+id/btnExit"
            android:onClick="ButtonsOnClick"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/style_btn_blue1"
            android:text="@string/exit"/>

    </LinearLayout>

</RelativeLayout>
