<!--
  ~ Copyright (c) 2015. Fahad Alduraibi
  ~ http://www.fadvisor.net
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="net.fadvisor.funwitharabic.GameActivity"
    style="@style/AppTheme">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#ffdfffe9"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="الإجابات الصحيحة"
            android:id="@+id/textView3"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="النتيجة"
            android:id="@+id/textView4"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="الإجابات الخاطئة"
            android:id="@+id/textView5"
            android:layout_margin="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/titleInstruction"
        android:id="@+id/txtQInfo"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:background="#ffffccc5"
        android:textColor="#ff000000"
        android:layout_weight=".1"
        android:padding="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="Q: What is the thing that is can be you are not?"
        android:id="@+id/txtQ"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:textIsSelectable="false"
        android:background="#FF89fff8"
        android:textColor="#ff000000"
        android:layout_weight=".4"
        android:gravity="center"
        android:padding="10dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"

        android:background="#FFefffe6"
        android:shrinkColumns="1"
        android:stretchColumns="2"
        android:padding="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn0"
                android:layout_column="1"
                android:onClick="ButtonsOnClick"
                style="@style/button_selection" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn1"
                android:layout_column="2"
                android:onClick="ButtonsOnClick"
                style="@style/button_selection" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn2"
                android:layout_column="1"
                android:onClick="ButtonsOnClick"
                style="@style/button_selection" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/btn3"
                android:layout_column="2"
                android:onClick="ButtonsOnClick"
                style="@style/button_selection" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/btnNew"
                android:id="@+id/btnNew"
                android:layout_column="1"
                android:onClick="ButtonsOnClick"
                style="@style/style_btn_blue1"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/btnBack"
                android:id="@+id/btnBack"
                android:layout_column="1"
                android:onClick="ButtonsOnClick"
                style="@style/style_btn_blue1" />
        </TableRow>


    </TableLayout>
</LinearLayout>

