<!--
  ~ Copyright (c) 2015. Fahad Alduraibi
  ~ http://www.fadvisor.net
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="net.fadvisor.funwitharabic.GameActivity"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="الإجابات الصحيحة"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentTop="true"
        android:background="#99ffffff"
        android:textColor="@color/black"
        android:layout_toLeftOf="@+id/textView4"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="النتيجة"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#99ffffff"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="الإجابات الخاطئة"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentTop="true"
        android:background="#99ffffff"
        android:textColor="@color/black"
        android:layout_alignLeft="@+id/wrong_ans_count"
        android:layout_alignStart="@+id/wrong_ans_count"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"/>



    <TextView
        android:id="@+id/txtQInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/titleInstruction"
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_above="@+id/txtQ"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#99ffffff"/>

    <TextView
        android:id="@+id/txtQ"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="Q: What is the thing that is can be you are not?"
        android:textColor="#ffFF0000"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:background="@drawable/q_background"
        android:layout_alignTop="@+id/txtQT"
        android:layout_alignRight="@+id/btnNew"
        android:layout_alignEnd="@+id/btnNew"/>

    <TextView
        android:id="@+id/txtQT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="Q: What is the thing that is can be you are not?"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="40sp"
        android:background="@drawable/qt_background"
        android:layout_above="@+id/btn0"
        android:layout_alignRight="@+id/btnNew"
        android:layout_alignEnd="@+id/btnNew"/>

    <Button
        android:id="@+id/btn0"
        style="@style/button_selection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="ButtonsOnClick"
        android:text="New Button 0"
        android:layout_above="@+id/btn1"
        android:layout_alignRight="@+id/wrong_ans_count"
        android:layout_alignEnd="@+id/wrong_ans_count"/>

    <Button
        android:id="@+id/btn1"
        style="@style/button_selection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="ButtonsOnClick"
        android:text="New Button 1"
        android:layout_above="@+id/btn2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btn2"
        style="@style/button_selection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="ButtonsOnClick"
        android:text="New Button 2"
        android:layout_above="@+id/btn3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btn3"
        style="@style/button_selection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="ButtonsOnClick"
        android:text="New Button 3"

        android:layout_above="@+id/btnNew"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnNew"
        style="@style/style_btn_blue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="ButtonsOnClick"
        android:text="@string/btnNew"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/wrong_ans_count"
        android:layout_alignEnd="@+id/wrong_ans_count"/>

    <Button
        android:id="@+id/btnBack"
        style="@style/style_btn_blue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="ButtonsOnClick"
        android:text="@string/btnBack"
        android:layout_alignTop="@+id/btnNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/right_ans_count"
        android:gravity="center"
        android:textColor="#27e900"
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_above="@+id/txtQInfo"
        android:background="#99ffffff"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/wrong_ans_count"
        android:textSize="20sp"
        android:textColor="#e10000"
        android:gravity="center"
        android:layout_above="@+id/txtQInfo"
        android:layout_below="@+id/textView5"
        android:background="#99ffffff"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/result_count"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_above="@+id/txtQInfo"
        android:layout_below="@+id/textView4"
        android:background="#99ffffff"/>

</RelativeLayout>

